==> yhx-cl/smart_watch/STM32F407VET6_HAL_01 - lvgl/Core/Src/lcd.c <==
#include "lcd.h"
#include "spi.h"
#include "stdlib.h"
#include "font.h"
#include "image2lcd.h"

void LCD_WR_REG(u8 regval)
{
	LCD_RS_Set(GPIO_PIN_RESET);
	LCD_CS_Set(GPIO_PIN_RESET);

	HAL_SPI_Transmit(&hspi1, &regval,1, 0xffff);

	LCD_CS_Set(GPIO_PIN_SET);
}

void LCD_WR_DATA(u8 data)
{
	LCD_RS_Set(GPIO_PIN_SET);
	LCD_CS_Set(GPIO_PIN_RESET);

	HAL_SPI_Transmit(&hspi1,&data, 1, 0xffff);

	LCD_CS_Set(GPIO_PIN_SET);
}

void LCD_WriteRAM(u16 RGB_Code)
{
	u8 data[2];
	LCD_RS_Set(GPIO_PIN_SET);
	LCD_CS_Set(GPIO_PIN_RESET);

	data[0] = RGB_Code >> 8;
	data[1] = RGB_Code & 0xff;
	
	HAL_SPI_Transmit(&hspi1, data, 2, 0xffff);

	LCD_CS_Set(GPIO_PIN_SET);
}

void LCD_Init(void)
{
	// LCD复位
	LCD_RST_Set(GPIO_PIN_SET);
	HAL_Delay(10);
	LCD_RST_Set(GPIO_PIN_RESET);
	HAL_Delay(20);
	LCD_RST_Set(GPIO_PIN_SET);
	HAL_Delay(20);
	// LCD_RD=1;//不读，拉高RD即可

	LCD_INIT_CODE();

	LCD_Display_Dir(Landscape);															 // 1:竖屏；0:横屏   横竖屏从这里切换
	LCD_Clear(WHITE);																	 // 刷白
	image_display((lcddev.width - 80) / 2, (lcddev.height - 63) / 2, (u8 *)gImage_logo); // 居中显示logo
	HAL_Delay(500);
	LCD_Clear(WHITE);
}

void LCD_Clear(u16 color)
{
	u32 index = 0;
	u32 totalpoint = lcddev.width;
	totalpoint *= lcddev.height; // 得到总点数
	LCD_Set_Window(0, 0, lcddev.width, lcddev.height);
	LCD_WriteRAM_Prepare(); // 开始写入GRAM

	LCD_RS_Set(GPIO_PIN_SET);
	LCD_CS_Set(GPIO_PIN_RESET);

	for (index = 0; index < totalpoint; index++)
	{
#if (FAST == 0)
		LCD_WriteRAM(color);
#else
		// 使用以下代码可以提速
#if (Interface == I80_16BIT)
		DATAOUT(color);
		LCD_WR = 0;
		LCD_WR = 1;
#elif (Interface == D4WSPI)
		u8 data[2];
		data[0] = color >> 8;
		data[1] = color & 0xff;
		HAL_SPI_Transmit(&hspi1,data,2,0xffff);
#else
		DATAOUT(color >> 8);
		LCD_WR = 0;
		LCD_WR = 1;
		DATAOUT(color);
		LCD_WR = 0;
		LCD_WR = 1;
#endif
#endif
	}
	LCD_CS_Set(GPIO_PIN_SET);
}
